# claude-usage-dashboard

./: .claude  .dockerignore  .gitignore  CHANGELOG.md  DOCKER_RUST.md  Dockerfile  Dockerfile.dev  Dockerfile.proxy  Dockerfile.rust  PERFORMANCE_ANALYSIS.md  PERFORMANCE_COMPARISON.md  README.md  REFACTORING_PLAN.md  RUST_MIGRATION.md  RUST_MIGRATION_PLAN.md  benchmark.js  commit-security.sh  docker-compose.dev.yml  docker-compose.rust.yml  docker-compose.yml  docker-entrypoint-rust.sh  package-lock.json  package.json  server.js  start.sh  tsconfig.json
docs/: api-specification.md  architecture-improvements.md  docker-implementation.md  improvement-suggestions.md  package-json-consolidation.md  performance-optimizations.md  project-implementation-summary.md  refactoring-plan.md  security-improvements.md
mcp-server/: claude-session.json  index.js  package.json
public/: index.html
rust-backend/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.dev
rust-backend/src/: main.rs
rust-backend/src/config/: mod.rs
rust-backend/src/models/: mod.rs
rust-backend/src/routes/: daily.rs  mod.rs  models.rs  monthly.rs  projects.rs
rust-backend/src/services/: project_service.rs
rust-benchmark/: Cargo.toml
rust-benchmark/src/: main.rs
rust-processor/: Cargo.toml
rust-processor/src/: main.rs
src/: App.css  App.js  App.tsx  index.tsx
src/components/: DailyHourlyDetail.css  DailyHourlyDetail.tsx  Dashboard.js  Dashboard.tsx  DataTable.js  DataTable.tsx  ErrorDashboard.css  ErrorDashboard.tsx  ErrorFilterPanel.css  ErrorFilterPanel.tsx  ErrorLogTable.css  (+21 more)
(+48 files in other folders)
