[package]
name = "rust-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
# Webフレームワーク
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }

# シリアライゼーション
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 日時処理
chrono = { version = "0.4", features = ["serde"] }

# エラーハンドリング
anyhow = "1.0"
thiserror = "1.0"

# ロギング
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 環境変数
dotenvy = "0.15"
